add lang2vec distances

--- a/Pipeline/output/graphs/make_graphs.ipynb
+++ b/Pipeline/output/graphs/make_graphs.ipynb
@@ -405,20 +405,22 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-20T12:28:10.899909Z",
-     "start_time": "2025-04-20T12:28:10.582963Z"
+     "end_time": "2025-05-04T16:19:17.824624Z",
+     "start_time": "2025-05-04T16:19:17.546772Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import re\n",
+    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime\n",
     "from matplotlib.patches import Rectangle\n",
     "from matplotlib.colors import to_rgba\n",
     "\n",
     "# Load file\n",
-    "file_path = \"../europa_random_split/judge_responses.txt\"\n",
+    "file_path = \"../europa_random_split/raw_results/judge_responses.txt\"\n",
     "with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
     "    content = f.read()\n",
     "\n",
@@ -465,6 +467,22 @@
     "        )\n",
     "    )\n",
     "\n",
+    "# Ensure the output directory exists\n",
+    "output_dir = \"../europa_random_split/analysis\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "# Create timestamped filename\n",
+    "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "output_path = os.path.join(output_dir, f\"analysis_{timestamp}.txt\")\n",
+    "\n",
+    "# Write results to file\n",
+    "with open(output_path, \"w\", encoding=\"utf-8\") as out_file:\n",
+    "    out_file.write(\"Language\\tMean Score\\tVariance\\n\")\n",
+    "    for lang, mean, var in zip(languages, means, variances):\n",
+    "        out_file.write(f\"{lang}\\t{mean:.4f}\\t{var:.4f}\\n\")\n",
+    "\n",
+    "print(f\"Analysis saved to {output_path}\")\n",
+    "\n",
     "# Styling\n",
     "plt.xticks(x, languages)\n",
     "plt.ylabel(\"Score\")\n",
@@ -477,6 +495,13 @@
    "id": "5e99f921ca63a1f4",
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analysis saved to ../europa_random_split/analysis\\analysis_20250504_181917.txt\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "<Figure size 1000x600 with 1 Axes>"
@@ -487,7 +512,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
